atualizando página de luxo

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
 
 /* conteudo */
 .content {
-    margin-top: 60px;
+    padding-top: 60px;
 }
 
 /* banner */
@@ -96,15 +96,48 @@ body {
     align-items: center;
     justify-content: space-between;
     border-bottom: 0.05px solid #ccc;
+    overflow: hidden;
 }
 .card div {
     flex: 1;
     overflow: hidden;
     padding: 40px;
 }
+.card .car {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 .card p {
     color: #8a8a8a;
     font-size: 20px;
+    text-align: justify;
+}
+.card .preco {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 10px 5px;
+}
+.card .preco p {
+    font-weight: bold;
+    padding: 0 10px;
+    color: black;
+}
+.card .preco button {
+    padding: 8px;
+    border-radius: 10px;
+    background-color: #16a144;
+    border: none;
+    color: #fff;
+    font-weight: 900;
+    font-size: 18px;
+    cursor: pointer;
+    box-shadow: 2px 2px #0000005c;
+}
+.card .preco button:hover {
+    background-color: #22ca5a;
 }
 
 /* footer */
