--- a/style.css
+++ b/style.css
@@ -48,11 +48,12 @@ body {
 .header ul li a:hover {
     background-color: rgb(224, 81, 81);
 }
-.header div {
+.header a {
     color: #e2b40a;
     padding: 10px;
     font-size: 30px;
     font-weight: 900;
+    text-decoration: none;
 }
 
 /* conteudo */
@@ -88,7 +89,7 @@ body {
 
 /* cards */
 .card {
-    height: 420px;
+    min-height: 420px;
     width: 100%;
     background-color: whitesmoke;
     display: flex;
@@ -97,11 +98,18 @@ body {
     justify-content: space-between;
     border-bottom: 0.05px solid #ccc;
     overflow: hidden;
+    padding: 40px;
+}
+.card-reverse {
+    flex-direction: row-reverse;
 }
 .card div {
     flex: 1;
     overflow: hidden;
-    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px;
 }
 .card .car {
     display: flex;
@@ -115,7 +123,9 @@ body {
     text-align: justify;
 }
 .card .preco {
+    width: 100%;
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: flex-end;
     padding: 10px 5px;
@@ -154,4 +164,28 @@ body {
 .footer div {
     padding: 20px;
     font-size: 25px;
+}
+
+@media (max-width: 720px) {
+    .header { 
+        padding: 5px;
+    }
+    .banner button {
+        left: 20%;
+    }
+    .card {
+        flex-direction: column;
+        padding: 10px;
+    }
+    .header a {
+        padding: 10px;
+        font-size: 18px;
+    }
+    .header ul li a {
+        padding: 4px;
+        font-size: 12px;
+    }
+    .card-reverse {
+        flex-direction: column;
+    }
 }
